--- a/zero2prod/Cargo.toml
+++ b/zero2prod/Cargo.toml
@@ -15,5 +15,7 @@ name = "zero2prod"
 
 [dependencies]
 actix-web = "4.3.1"
+config = "0.13.3"
 reqwest = "0.11.19"
+serde = { version = "1.0.185", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
