--- a/zero2prod/Cargo.toml
+++ b/zero2prod/Cargo.toml
@@ -15,7 +15,22 @@ name = "zero2prod"
 
 [dependencies]
 actix-web = "4.3.1"
+chrono = "0.4.26"
 config = "0.13.3"
 reqwest = "0.11.19"
 serde = { version = "1.0.185", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
+uuid = { version = "1.4.1", features = ["v4"] }
+
+# Using table-like toml syntax to avoid a super-long line!
+[dependencies.sqlx]
+version = "0.7.1"
+default-features = false
+features = [
+    "runtime-tokio-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate"
+]
