--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -150,6 +150,5 @@ jobs:
         working-directory: ${{ matrix.project }}
 
       - name: Generate code coverage
-        run: |
-          cargo tarpaulin --verbose
+        run: cargo install cargo-tarpaulin && cargo tarpaulin --verbose --workspace
         working-directory: ${{ matrix.project }}
