--- a/zero2prod/Cargo.toml
+++ b/zero2prod/Cargo.toml
@@ -15,7 +15,7 @@ name = "zero2prod"
 
 [dependencies]
 actix-web = "4.3.1"
-chrono = "0.4.26"
+chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
 config = "0.13.3"
 reqwest = "0.11.19"
 serde = { version = "1.0.185", features = ["derive"] }
