--- a/zero2prod/Cargo.toml
+++ b/zero2prod/Cargo.toml
@@ -17,8 +17,15 @@ name = "zero2prod"
 actix-web = "4.3.1"
 chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
 config = "0.13.3"
+once_cell = "1.18.0"
 reqwest = "0.11.19"
+secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.185", features = ["derive"] }
+tracing = { version = "0.1.37", features = ["log"] }
+tracing-actix-web = "0.7.6"
+tracing-bunyan-formatter = "0.3.9"
+tracing-log = "0.1.3"
+tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1.4.1", features = ["v4"] }
 
