Update PostgreSQL and README

--- a/zero2prod/scripts/docker-compose.yml
+++ b/zero2prod/scripts/docker-compose.yml
@@ -9,7 +9,7 @@ version: '3.8'
 
 services:
   db:
-    image: rapidfort/postgres
+    image: rapidfort/postgresql
     restart: always
     environment:
       POSTGRES_USER: root
@@ -17,12 +17,3 @@ services:
       POSTGRES_DB: newsletter
     ports:
       - "5432:5432"
-  pgadmin:
-    container_name: pgadmin
-    image: dpage/pgadmin4
-    restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: root
-    ports:
-      - "5050:80"
